kubernetes-explain/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
namespace: explain
  name: dash-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: explain-app
  template:
    metadata:
      labels:
        app: explain-app
    spec:
      containers:
      - name: explain-app
        image: franck123/explain:explainApp
        ports:
        - containerPort: 8050
metadata:
namespace: explain
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:latest
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-pv
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-pv
        persistentVolumeClaim:
          claimName: postgres-pvc
