kubernetes-explain/deployment_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: explain
  name: dash-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: explain-app
  template:
    metadata:
      labels:
        app: explain-app
    spec:
      containers:
      - name: explain-app
        image: franck123/webexplain:2
        args: ['python', 'app.py']
        ports:
        - containerPort: 80
        volumeMounts:
        - name: explain-app-pv
          mountPath: /var/lib/explain_app/data
      volumes:
      - name: explain-app-pv
        persistentVolumeClaim:
          claimName: myclaim
