kubernetes-explain/deployment_postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: explain
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:15
        ports:
        - containerPort: 5432

        volumeMounts:
        - name: init-scripts
          mountPath: /docker-entrypoint-initdb.d

      volumes:
      - name: postgres-pv
        persistentVolumeClaim:
          claimName: myclaim

      - name: init-scripts
        configMap:
          name: init-scripts-postgresql
