kubernetes-explain/service_app.yaml
apiVersion: v1
kind: Service
metadata:
  name: explain-app-service
  namespace: explain
spec:
  selector:
    app: explain-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8050
  type: LoadBalancer
