kubernetes-explain/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: myapp.explain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: explain-app-service
            port:
              number: 80
